# EME-EUI-Automotive-Embedded-Software-Development

./: README.md
0- C Programming/Projects/: BusReservation.c  Calculator_Func_pointers.c  Stack.c
0- C Programming/Tasks/: Best_time_to_buy_and_sell_stock.c  Best_time_to_buy_and_sell_stock_2.c  Fibonacci.c  Max_water_container.c  Palindrome_reverse_int.c  Rotate_array.c  Secondmax.c  Swap.c
3- AVR - KL15/: README.md
3- AVR - KL15/Release/MCAL/: Ext_INT.d
4- AVR - ECU Communication/: README.md
5- ARM - Firmware Update Over CAN/custom_bootloader/: .mxproject
5- ARM - Firmware Update Over CAN/custom_bootloader/Core/Src/: main.c
5- ARM - Firmware Update Over CAN/firmware_application/: .cproject  .project  firmware_application.ioc
5- ARM - Firmware Update Over CAN/firmware_application/Core/Inc/: main.h
5- ARM - Firmware Update Over CAN/firmware_application/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
5- ARM - Firmware Update Over CAN/firmware_application/Debug/: firmware_application.hex
5- ARM - Firmware Update Over CAN/update_server/: .cproject  .project  update_server.ioc
5- ARM - Firmware Update Over CAN/update_server/Core/Inc/: app2_data.h  main.h
5- ARM - Firmware Update Over CAN/update_server/Core/Src/: app2_data.c  main.c
5- ARM - Firmware Update Over CAN/update_server/Debug/: update_server.hex
6- Ethernet - TCP Chatroom in Python/: README.md
6- Ethernet - TCP Chatroom in Python/client/: client.py  client_config.py  main.py
6- Ethernet - TCP Chatroom in Python/server/: chat_server.py  commands.py  main.py  server_config.py
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/: .gitignore  .project  CMakeLists.txt  README.md
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/Docs/: Flowchart Guidelines.drawio
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/Docs/Diagrams/: STM_Fiat.puml  V2V_layered_arch.drawio  system_overview.puml
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/Docs/Diagrams/ECU_Fiat/: STM_FIAT_CAN_PROCESS_TASK.drawio  STM_FIAT_CAN_RX_IT.drawio  STM_FIAT_UART_TASK.drawio
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/ESP-CODE/: ESP8266_Ahmed.ino  ESP8266_Recieve_esp-NOW.ino  ESP8266_Sakr.ino  ESP8266_Send_esp-NOW.ino
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/WebserverHTML/: webserver.html
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/WebserverHTML/ESP code/: ESP8266_ESP-NOW_Reciever_wifi_server.ino
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_rc_car/: .cproject  .project  CAN_ESP_Car_Clone.ioc  CAN_ESP_Car_Clone.launch  CMakeLists.txt  README.md
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_rc_car/Core/DCM/: DCM_RTOS.c  DCM_RTOS.h  DCM_config.h  DCM_interface.h  DCM_prog.c
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_rc_car/Core/Inc/: FreeRTOSConfig.h  Ultrasonic_Task.h  app_config.h  app_interface.h  main.h  stm32f1xx_it.h  ultrasonic_confg.h  ultrasonic_interface.h
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_rc_car/Core/Src/: Ultrasonic_Task.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  ultrasonic.c
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_real_car/: .project  CMakeLists.txt  stm32_real_car Debug.launch  stm32_real_car.ioc
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_real_car/Core/Inc/: FreeRTOSConfig.h  app_config.h  app_interface.h  main.h  std.h  stm32f1xx_it.h
8- Grad - CAN ESP Car Clone Emulating Real Car Actions/stm32_real_car/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
